--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -19,6 +19,7 @@
     "gulp-cache": "^0.4.3",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.4",
@@ -26,11 +27,14 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^7.0.0",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-uglify": "^1.5.3",
     "gulp-usemin": "^0.3.21",
+    "gulp-useref": "^3.0.8",
     "jit-grunt": "^0.10.0",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
+    "lazypipe": "^1.0.1",
     "time-grunt": "^1.3.0"
   },
   "engines": {
