Introducing karma and jasmine test framework for doing unit testing.

--- a/conFusion/bower.json
+++ b/conFusion/bower.json
@@ -27,6 +27,10 @@
     "angular": "~1.4.7",
     "angular-route": "^1.5.3",
     "angular-ui-router": "^0.2.18",
-    "angular-resource": "^1.5.3"
+    "angular-resource": "^1.5.3",
+    "angular-mocks": "^1.5.5"
+  },
+  "resolutions": {
+    "angular": "1.5.5"
   }
 }
