--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -31,10 +31,17 @@
     "gulp-uglify": "^1.5.3",
     "gulp-usemin": "^0.3.21",
     "gulp-useref": "^3.0.8",
+    "jasmine-core": "^2.4.1",
     "jit-grunt": "^0.10.0",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
+    "karma": "^0.13.22",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
     "lazypipe": "^1.0.1",
+    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.7",
     "time-grunt": "^1.3.0"
   },
   "engines": {
