--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -19,6 +19,7 @@
     "gulp-cache": "^0.4.3",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
